--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/sheep-on-the-table.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-3.0.17-ga-bin.jar=lib\\mysql-connector-java-3.0.17-ga-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -38,7 +39,8 @@ javac.classpath=\
     ${javafx.runtime}/lib/jfxrt.jar:\
     ${javafx.runtime}/lib/deploy.jar:\
     ${javafx.runtime}/lib/javaws.jar:\
-    ${javafx.runtime}/lib/plugin.jar
+    ${javafx.runtime}/lib/plugin.jar:\
+    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
