--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,2 @@
-auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-# No need to modify this property unless customizing JavaFX Ant task infrastructure
-endorsed.javafx.ant.classpath=.
-javafx.run.inbrowser=<Default System Browser>
-javafx.run.inbrowser.path=C:\\Users\\Filip\\AppData\\Local\\Google\\Chrome\\Application\\chrome.exe
+compile.on.save=true
 user.properties.file=C:\\Users\\Filip\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
