--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/server.jar
+dist.jar=${dist.dir}/server-on-the-table.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
