--- a/client/nbproject/private/private.properties
+++ b/client/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/eliasaa/.netbeans/6.9/build.properties
+user.properties.file=/home/filip/.netbeans/7.2/build.properties
