--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -27,15 +27,13 @@ dist.jar=${dist.dir}/sheep-on-the-table.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.mysql-connector-java-3.0.17-ga-bin.jar=lib\\mysql-connector-java-3.0.17-ga-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
