--- a/client/nbproject/private/private.properties
+++ b/client/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/filip/.netbeans/7.2/build.properties
+user.properties.file=C:\\Users\\H\u00e5kon\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
