--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-private.properties
-/server/nbproject/private/*
-/client/nbproject/private/*
-/server/build/*
-/client/build/*
-/server/dist/*
-/client/dist/*
+nbproject/private/
+build/
+nbbuild
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
