--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/sheep-on-the-table.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.common-src=../common/src
 file.reference.mysql-connector-java-3.0.17-ga-bin.jar=lib\\mysql-connector-java-3.0.17-ga-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
