--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -80,7 +80,7 @@ main.class=my.servonthetable.Server
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
