--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -71,7 +71,7 @@ main.class=my.sheeponthetable.MainUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.71
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
