Have put some of the code together. Should in theory work a little bit.

--- a/client/src/my/sheeponthetable/tools/settings.properties
+++ b/client/src/my/sheeponthetable/tools/settings.properties
@@ -2,9 +2,6 @@
 # Follow usual .properties-annotation
 # http://en.wikipedia.org/wiki/.properties
 # 
-# Setting MySQL credencials
-dbHost = mysql.stud.ntnu.no
-dbPort = 3306
-dbUser = knutela_sheep
-dbPass = pwonthetable
-dbName = knutela_sheep
+# Setting for server
+serverURL = the.server.com
+serverPort = 1234
