--- a/client/src/my/sheeponthetable/tools/settings.properties
+++ b/client/src/my/sheeponthetable/tools/settings.properties
@@ -3,5 +3,5 @@
 # http://en.wikipedia.org/wiki/.properties
 # 
 # Setting for server
-serverURL = the.server.com
-serverPort = 1234
+serverURL = localhost
+serverPort = 30480
