--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}
+    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
