Added Filip "Pro" Mysql Server to settings.properties, so we dont need that fucking vpn shit to test the server <3 yes :)

--- a/server/src/my/servonthetable/settings.properties
+++ b/server/src/my/servonthetable/settings.properties
@@ -3,7 +3,7 @@
 # http://en.wikipedia.org/wiki/.properties
 # 
 # Setting MySQL credencials
-dbHost = mysql.stud.ntnu.no
+dbHost = dyn.filllip.net
 dbPort = 3306
 dbUser = knutela_sheep
 dbPass = pwonthetable
