--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.common-src=../common/src
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.jxmapviewer2.jar=lib\\jxmapviewer2.jar
 file.reference.mysql-connector-java-3.0.17-ga-bin.jar=lib\\mysql-connector-java-3.0.17-ga-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -35,7 +37,9 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.jxmapviewer2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
