Changed client so it communicates with the new JSON server

--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -29,6 +29,9 @@ endorsed.classpath=
 excludes=
 file.reference.common-src=../common/src
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.json-smart-1.1.1.jar=lib\\json-smart-1.1.1.jar
+file.reference.jsonrpc2-base-1.27.jar=lib\\jsonrpc2-base-1.27.jar
+file.reference.jsonrpc2-client-1.8.jar=lib\\jsonrpc2-client-1.8.jar
 file.reference.jxmapviewer2.jar=lib\\jxmapviewer2.jar
 file.reference.mysql-connector-java-3.0.17-ga-bin.jar=lib\\mysql-connector-java-3.0.17-ga-bin.jar
 includes=**
@@ -39,7 +42,10 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
     ${libs.swing-layout.classpath}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.jxmapviewer2.jar}
+    ${file.reference.jxmapviewer2.jar}:\
+    ${file.reference.jsonrpc2-client-1.8.jar}:\
+    ${file.reference.jsonrpc2-base-1.27.jar}:\
+    ${file.reference.json-smart-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +65,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.jsonrpc2-base-1.27.jar=E:\\Javadrit\\JsonRpc2-Base-1.27\\javadoc
+javadoc.reference.jsonrpc2-client-1.8.jar=E:\\Javadrit\\JsonRpc2-Client-1.8\\javadoc
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -88,5 +96,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.jsonrpc2-base-1.27.jar=E:\\Javadrit\\JsonRpc2-Base-1.27\\src
+source.reference.jsonrpc2-client-1.8.jar=E:\\Javadrit\\JsonRpc2-Client-1.8\\src
 src.dir=src
 test.src.dir=test
