--- a/client/src/my/sheeponthetable/tools/settings.properties
+++ b/client/src/my/sheeponthetable/tools/settings.properties
@@ -3,7 +3,11 @@
 # http://en.wikipedia.org/wiki/.properties
 # 
 # Setting for server
-serverURL = localhost
-serverPort = 30480
+serverURL = http://dyn.filllip.net/sheepwebservice2/
 username = 
 password = 
+tempuser =
+temppass =
+temphash =
+tempuserid = 
+tempfarmid =
