--- a/client/src/my/sheeponthetable/tools/settings.properties
+++ b/client/src/my/sheeponthetable/tools/settings.properties
@@ -3,6 +3,6 @@
 # http://en.wikipedia.org/wiki/.properties
 # 
 # Setting for server
-serverURL = http://dyn.filllip.net/sheepwebservice2/
+serverURL = https://dyn.filllip.net/sheepwebservice2/
 username = 
 password = 
