--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=
 excludes=
 file.reference.common-src=../common/src
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.jdatepicker-1.3.2.jar=lib/jdatepicker-1.3.2.jar
 file.reference.json-smart-1.1.1.jar=lib\\json-smart-1.1.1.jar
 file.reference.jsonrpc2-base-1.27.jar=lib\\jsonrpc2-base-1.27.jar
 file.reference.jsonrpc2-client-1.8.jar=lib\\jsonrpc2-client-1.8.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.jxmapviewer2.jar}:\
     ${file.reference.jsonrpc2-client-1.8.jar}:\
     ${file.reference.jsonrpc2-base-1.27.jar}:\
-    ${file.reference.json-smart-1.1.1.jar}
+    ${file.reference.json-smart-1.1.1.jar}:\
+    ${file.reference.jdatepicker-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
