Fixed settings for installer!

--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.splash=C:\\Users\\Filip\\Documents\\GitHub\\sheep-on-the-table\\client\\src\\my\\sheeponthetable\\gui\\resources\\logo-splash.png
 application.title=sheep-on-the-table
 application.vendor=filip
 build.classes.dir=${build.dir}/classes
